[package]
name = "ntnu-timeplan-api"
version = "0.0.0"
edition = "2021"

[dependencies]
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.22", features = ["full"] }
scraper = "0.15.0"
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
itertools = "0.10"
axum = "0.6"
axum-macros = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
color-eyre = "0.6"
mini-moka = "0.10"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
tower_governor = "0.0.4"
icalendar = "0.15"
ts-rs = { version = "6.2", features = ["serde-compat", "chrono-impl"] }
utoipa = { version = "3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1", features = ["axum"] }
