[package]
name = "ntnu-timeplan-api"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
tokio = { version = "1.22", features = ["full"] }
scraper = "0.16"
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
itertools = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
anyhow = "1.0"
mini-moka = "0.10"
icalendar = "0.15"
rmp-serde = "1.1"
data-encoding = "2.3"
poem = { version = "1.3", features = ["anyhow"] }
poem-openapi = { version = "2.0", features = ["chrono", "openapi-explorer"] }
