[package]
name = "ntnu-timeplan-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
scraper = "0.17"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
itertools = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
anyhow = "1.0"
mini-moka = "0.10"
icalendar = "0.15"
rmp-serde = "1.1"
data-encoding = "2.3"
thiserror = "1"
rspc = { version = "0.1", features = ["axum", "chrono"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
futures-util = "0.3"